tests/purus/passing/ShouldFail/Misc/IncompleteCases.purs
module IncompleteCses where

testIncompleteCases :: Int -> Int
testIncompleteCases = case _ of
  0 -> 0
  1 -> 1
  2 -> 2
  3 -> 3
